@@ -1,3 +1,4 @@
+* Add translated descriptor for Reference field
 * Implement alter_type and alter_size for sqlite backend
 * Add a maximum size for request
 * Add support for single record report
